# AI-Database-Query-System

./: .gitignore  Readme.md  pyproject.toml  rough.py
Research/: High_Level_Architecture_Diagram.md  Roadmap.md
nl_to_sql_desktop/: db_connector.py  main.py
nl_to_sql_desktop/ui/: home_window.py  home_window2.py  login_window.py
